--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 /* Header */
 header {
-  background-color: #2f3e46;
+  background-color: #589bab;
   color: white;
   text-align: center;
   padding: 25px 15px;
